# rag-lab

./: .gitignore  README.md
multi-lab/: .env.example  README.md  agents.yaml  pyproject.toml  tasks.yaml
multi-lab/data/: sample.md
multi-lab/src/multi_lab/: __init__.py  config.py  main.py  orchestrator.py  rag_store.py  rag_tools.py
multi-lab/tests/: test_cli.py  test_config.py  test_orchestrator.py  test_rag_tools.py
rag-mvp/: .env.example  RAG知识库项目文档.md  README.md  app.py  cli.py  pyproject.toml
rag-mvp/data/: sample.md
rag-mvp/data/agent-dialog-notes/: OpenClaw-Docker-命令与排障-2026-03-02.md  OpenClaw-Gateway与核心能力说明-2026-03-02.md  OpenClaw-控制台ERR_CONNECTION_RESET排障-2026-03-02.md  novelai-studio-部署与功能迭代记录-2026-02-28.md  obsidian-dialog-export-技能改造复盘-2026-03-01.md  obsidian-dialog-export-模板路由优化-2026-02-28.md
rag-mvp/data/obsidian/: AI时代个人学习方向思考.md  Antigravity.md  Model.md  MongoDB Compass.md  MongoDB.md  MongoDB核心概念.md  Obsidian教程.md  framing.md  mongoDB 实战对话.md  中断情绪反刍案例.md  嵌入 (Embedding) vs 引用 (Referencing).md  底层认知模型训练.md  心理边界清晰.md  情绪反刍.md  索引.md  聚合管道.md  自我价值的稳定性.md  英伟达.md  解释权重.md  调研流程.md
rag-mvp/src/: api.py  config.py  generator.py  loader.py  openai_provider.py  openai_store.py  pipeline.py  retriever.py  store.py  ui_utils.py
rag-mvp/src/agent/: __init__.py  guardrail.py  (+3 more)
rag-mvp/tests/: test_agent_models.py  test_api.py  test_cli.py  test_config.py  test_guardrail.py  test_loader.py  test_openai_provider.py  test_orchestrator.py  test_pipeline.py  test_pipeline_openai.py  test_store.py  test_template_validator.py  test_ui_utils.py
(+24 files in other folders)
